Fix background-filter on Safari. Remove blur from verse.

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -45,8 +45,6 @@
 
 .verse {
    background: rgba(51,51,51,0.75);
-   backdrop-filter: blur(4px);
-   -webkit-backdrop-filter: blur(4px);
   line-height: 1.75em;
   padding: 1em;
   padding-left: 2em;
@@ -120,6 +118,7 @@ div ul li div {
   box-shadow: 0px 0px 50px 0px #111;
    background: rgba(51,51,51,0.7);
    backdrop-filter: blur(5px);
+   -webkit-backdrop-filter: blur(5px);
    padding: .5em;
    border-left: 2px solid $primary;
    border-radius: 5px;
